make src/v3 yarn workspace, install dependencies

--- a/package.json
+++ b/package.json
@@ -224,7 +224,8 @@
       "test/e2e",
       "test/types",
       "playground",
-      "packages/@okta/courage-dist"
+      "packages/@okta/courage-dist",
+      "src/v3"
     ],
     "nohoist": [
       "**/@wdio/**"
