--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,28 @@
-node_modules
-npm-debug.log
-yarn-error.log
-.log
-target*
-build2
+.DS_Store
+.env
+.eslintcache
 .grunt
+.idea
+.log
 .sass-cache
+.vscode
 .widgetrc
 .widgetrc.js
-.vscode
-.DS_Store
-*.iml
-.idea
-src/config/config.json
-/dist
+.widgetrc.json
 .yalc
-.env
-testenv
+*.iml
+*.log
+/dist
+build2
+node_modules
+package-lock.json
+packages/@okta/i18n/dist/
 packages/@okta/i18n/src/json/
 packages/@okta/i18n/src/properties/*_in.*
-packages/@okta/i18n/dist/
+src/config/config.json
+target*
 test-reports/
-package-lock.json
-.eslintcache
 types/
-
-# Test dist package
 node_modules2
 /test/package/**/yarn.lock
+testenv
