--- a/package.json
+++ b/package.json
@@ -96,6 +96,10 @@
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-strip": "^2.1.0",
+    "@types/eslint-scope": "^3.7.3",
+    "@types/jqueryui": "^1.12.16",
+    "@types/selectize": "^0.12.35",
+    "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "@zerollup/ts-transform-paths": "^1.7.18",
@@ -193,11 +197,6 @@
     "@okta/okta-auth-js": "6.5.1",
     "@sindresorhus/to-milliseconds": "^1.0.0",
     "@types/backbone": "^1.4.15",
-    "@types/jquery": "^3.5.14",
-    "@types/jqueryui": "^1.12.16",
-    "@types/q": "^1.5.5",
-    "@types/selectize": "^0.12.35",
-    "@types/underscore": "^1.11.4",
     "clipboard": "^1.5.16",
     "cross-fetch": "^3.1.5",
     "handlebars": "^4.7.7",
