--- a/src/v3/.gitignore
+++ b/src/v3/.gitignore
@@ -1,5 +1,12 @@
+!*.d.ts
+!types/
+.DS_Store
 .env
+.log
+.npmrc
 .vscode
+.yalc
+*.local
 *.log
 build/
 build2/
@@ -7,13 +14,6 @@ coverage/
 dist/
 node_modules/
 size-plugin.json
-stats.json
-.DS_Store
 src/properties/json/
-
-# yalc
-.yalc
+stats.json
 yalc.lock
-
-# npm
-.npmrc
